kubernetes/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: python
  labels:
    istio-injection: disabled
