kubernetes/core/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
    labels:
      app: pythonstart
    name: pythonstart
    namespace: python
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: pythonstart
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: pythonstart
      spec:
        containers:
        - imagePullPolicy: IfNotPresent
          name: pythonstarter
          image: pythonStarter
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          volumeMounts:
          - name: timezone
            mountPath: "/tmp/timezone"
            readOnly: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
          - name: http
            containerPort: 8080
        volumes:
        - name: timezone
          configMap:
            name: worldtime
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
      
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
