kubernetes/core/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: python-frontend-service
  labels:
    app: pythonstart
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: pythonstart
