kubernetes/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"

    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    cert-manager.io/issuer: "selfsigned"
spec:
  tls:
    - hosts:
      - "example.com"
      secretName: tls-secret
  defaultBackend:
    service:
      name: python-frontend-service
      port:
        number: 8080
  rules:
    - host: python.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-frontend-service
                port:
                  number: 8080
